@@ -174,3 +174,7 @@
 	'sy/sysadv_server.cpp'.
 2014-09-28 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed regressions resulting from adding Win32 port.
+2014-09-28 Fred Gleason <fredg@paravelsystems.com>
+	* Modernized the AM_INIT() and AC_INIT() macro invocation in
+	'configure.ac'.
+	* Added the AC_CONFIG_MACRO_DIR([m4]) macro in 'configure.ac'.
